--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "commonjs",
   "name": "notes_app",
   "version": "1.0.0",
   "description": "",
@@ -31,6 +32,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/node": "^20.8.7"
+    "@types/node": "^20.8.7",
+    "ts-node": "^10.9.1"
   }
 }
