--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type": "commonjs",
+  "type": "module",
   "name": "notes_app",
   "version": "1.0.0",
   "description": "",
@@ -28,11 +28,11 @@
     "mongoose": "^7.6.2",
     "nodemon": "^3.0.1",
     "source-map-loader": "^4.0.1",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2"
+    "ts-loader": "^9.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
