--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "randomstring": "^1.3.0",
     "save": "^2.9.0",
     "source-map-loader": "^4.0.1",
-    "ts-loader": "^9.5.0"
+    "ts-loader": "^9.5.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
+    "@types/validator": "^13.11.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
